--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -157,16 +157,17 @@ aside {
     background-color: $secondary-color;
     color: $primary-color;
     font-weight: 600;
+    border-right: 2px solid $primary-color;
 
     li {
-        padding-bottom: 0.7rem;
+        padding-bottom: 1rem;
         padding-left: 1rem;
     }
 }
 
 // main
 main {
-    width: calc(100% - 200px);
+    width: calc(100% - 202px);
     height: calc(100vh - 70px);
     overflow-y: auto;
 }
