--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -74,12 +74,23 @@ dl, ol, ul {
     margin-bottom: 0rem;
 }
 
+.pl-3, .px-3{
+    padding-left: 0 !important;
+}
+
+.pr-3, .pr-3{
+    padding-right: 0 !important;
+}
+
 
 .row{
     --bs-gutter-x: 0px;
     margin-right: 0px;
     margin-left: 0px;
+}
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, .p{
+    margin-bottom: 0;
 }
 
 
