--- a/resources/sass/back-sass/back.scss
+++ b/resources/sass/back-sass/back.scss
@@ -7,6 +7,8 @@
 
 // COMPONENTS
 @import '../back-sass/components/form-card';
+@import '../back-sass/components/modal-confirm';
+@import '../back-sass/components/chart';
 
 // PAGES
 @import '../back-sass/pages/product-details';
