--- a/resources/sass/back-sass/pages/_product-details.scss
+++ b/resources/sass/back-sass/pages/_product-details.scss
@@ -58,3 +58,20 @@
         }
     }
 }
+
+// MEDIA QUERIES
+@media (max-width: 600px) {  
+
+    .ms_product-details {
+        flex-direction: column;
+
+        &-left {
+            margin-inline: auto;
+            margin-bottom: 2rem;
+            width: 70%;
+        }
+        &-info {
+            width: 100%;
+        }
+    }
+}
