--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -171,8 +171,9 @@ main {
     height: calc(100vh - 70px);
     overflow-y: auto;
 }
+
 section {
-    padding: 2rem;
+    padding: 2rem 2rem;
 }
 
 // buttons
@@ -227,85 +228,7 @@ section {
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
-// start banner elimination card confirm
-#myModal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    z-index: 2000;
-}
-.modal-confirm {		
-    color: $primary-color;
-    width: 400px;
-}
-.modal-confirm .modal-content {
-    padding: 2rem;
-    border-radius: 1rem;
-    border: 1px solid $secondary-color;
-    text-align: center;
-    font-size: 14px;
-}
-.modal-confirm .modal-header {
-    padding: 0;
-    border-bottom: none;   
-    position: relative;
-}
-.modal-confirm h4 {
-    margin-inline: auto;
-    font-size: 2.2rem;
-}
-.modal-confirm .close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    color: red;
-}
-.modal-confirm .modal-body {
-    padding: 0;
-    color: #999;
-}
-.modal-confirm .modal-footer {
-    padding: 0;
-    border: none;
-    text-align: center;		
-    font-size: 1rem;
-}
-.modal-confirm .modal-footer a {
-    color: #999;
-}		
-.modal-confirm .icon-box {
-    width: 80px;
-    height: 80px;
-    margin-inline: auto;
-    border-radius: 50%;
-    z-index: 1000;
-    border: 4px solid #f00;
-}
-.modal-confirm .icon-box i {
-    color: #f00;
-    font-size: 3rem;
-}
-.modal-confirm .btn, .modal-confirm .btn:active {
-    color: #fff;
-    border-radius: 4px;
-    background: #60c7c1;
-    text-decoration: none;
-    transition: all 0.4s;
-    line-height: normal;
-    min-width: 120px;
-    border: none;
-    min-height: 40px;
-    border-radius: 3px;
-    margin: 0 5px;
-}
-.trigger-btn {
-    display: inline-block;
-    margin: 100px auto;
-}
-// end banner elimination card confirm
-
-// BRAND LOGOS
+// BRAND LOGO
 .ms_header-brand-logo {
     width: 70px;
     transition: all 150ms ease-in;
@@ -316,3 +239,46 @@ section {
 }
 
 // MEDIA QUERIES
+@media (max-width: 768px) { 
+
+    // aside
+    aside {
+        padding-top: 2rem;
+        width: 55px;
+
+        li {
+
+            > a {
+                .ms_aside-link-txt {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    // main
+    main {
+        width: calc(100% - 57px);
+        height: calc(100vh - 70px);
+        overflow-y: auto;
+    }
+}
+
+@media (max-width: 480px) {  
+
+    section {
+        padding: 2rem 0.5rem;
+    }
+
+    // header
+    header {
+        .ms_user-name-header {
+            display: none;
+        }
+    }
+    
+    // BRAND LOGOS
+    .ms_header-brand-logo {
+        width: 50px;
+    }
+}
