added "order confirmed" modal

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9278,7 +9278,7 @@ a:hover {
   border: none;
   border-radius: 10rem;
   background-color: #740602;
-  color: #ffc509;
+  color: white;
 }
 .ms_btn:hover {
   text-decoration: none;
