--- a/resources/sass/back-sass/back.scss
+++ b/resources/sass/back-sass/back.scss
@@ -6,6 +6,7 @@
 @import '../back-sass/common/common';
 
 // COMPONENTS
+@import '../back-sass/components/product-card';
 @import '../back-sass/components/form-card';
 @import '../back-sass/components/modal-confirm';
 @import '../back-sass/components/chart';
