--- a/resources/sass/back-sass/pages/_orders.scss
+++ b/resources/sass/back-sass/pages/_orders.scss
@@ -20,3 +20,36 @@
     }
         
 }
+
+// MEDIA QUERIES
+@media screen and ( max-width: 640px ){
+
+    li.page-item {
+
+        display: none;
+    }
+
+    .page-item:first-child,
+    .page-item:nth-child( 2 ),
+    .page-item:nth-child( 3 ),
+    .page-item:nth-child( 4 ),
+    .page-item:nth-last-child( 4 ),
+    .page-item:nth-last-child( 3 ),
+    .page-item:nth-last-child( 2 ),
+    .page-item:last-child,
+    .page-item.active,
+    .page-item.disabled {
+
+        display: block;
+    }
+}
+
+@media screen and ( max-width: 400px ){
+
+    .page-item:nth-child( 3 ),
+    .page-item:nth-child( 4 ),
+    .page-item:nth-last-child( 4 ),
+    .page-item:nth-last-child( 3 ) {
+        display: none;
+    }
+}
