--- a/public/css/back.css
+++ b/public/css/back.css
@@ -39,7 +39,7 @@ label:not([for=cover], .form-check-label) {
 .ms_input-hover-wrapper:hover label:not([for=cover], .form-check-label) {
   top: 0;
   translate: 0.5rem 0;
-  color: #000;
+  color: #212529;
 }
 .ms_input-hover-wrapper:hover label.ms_label-active {
   color: #feaa02;
@@ -186,7 +186,7 @@ section {
   color: #feaa02;
 }
 .ms_btn[disabled] {
-  background-color: #000;
+  background-color: #212529;
   color: #acabab;
 }
 .ms_btn[disabled]:hover {
@@ -219,7 +219,12 @@ section {
 
 @media (min-width: 1200px) {
   section {
-    padding-inline: 7rem;
+    padding-inline: 4rem;
+  }
+}
+@media (min-width: 1500px) {
+  section {
+    padding-inline: 6rem;
   }
 }
 @media (max-width: 768px) {
@@ -235,7 +240,7 @@ section {
 }
 @media (max-width: 480px) {
   section {
-    padding-inline: 0.5rem;
+    padding-inline: 1rem;
   }
   header .ms_user-name-header {
     display: none;
@@ -392,12 +397,18 @@ section .ms_form-card-body {
   position: absolute;
   top: 0;
   right: 0;
-  color: red;
+  color: #feaa02;
+}
+.modal-confirm .close:hover {
+  color: #740602;
 }
 
 .modal-confirm .modal-body {
   padding: 0;
-  color: #999;
+  color: #212529;
+}
+.modal-confirm .modal-body p.ms_modal-delete-txt {
+  margin-bottom: 2rem;
 }
 
 .modal-confirm .modal-footer {
@@ -407,46 +418,49 @@ section .ms_form-card-body {
   font-size: 1rem;
 }
 
-.modal-confirm .modal-footer a {
-  color: #999;
-}
-
 .modal-confirm .icon-box {
   width: 80px;
   height: 80px;
   margin-inline: auto;
   border-radius: 50%;
-  z-index: 1000;
-  border: 4px solid #f00;
+  border: 4px solid #740602;
 }
 
 .modal-confirm .icon-box .fa-exclamation {
-  color: #f00;
+  color: #740602;
   font-size: 2.5rem;
 }
 
-.modal-confirm .btn, .modal-confirm .btn:active {
-  color: #fff;
-  border-radius: 4px;
-  background: #60c7c1;
-  text-decoration: none;
-  transition: all 0.4s;
-  line-height: normal;
-  min-width: 120px;
-  border: none;
-  min-height: 40px;
-  border-radius: 3px;
-  margin: 0 5px;
+.ms_more-info {
+  width: -moz-fit-content;
+  width: fit-content;
 }
-
-.trigger-btn {
-  display: inline-block;
-  margin: 100px auto;
+.ms_more-info ul {
+  list-style: inside;
+}
+.ms_more-info ul li::marker {
+  color: #264f36;
+}
+.ms_more-info h5 {
+  color: #feaa02;
+}
+.ms_more-info div {
+  font-size: 0.94rem;
+}
+.ms_more-info .ms_single-order-info,
+.ms_more-info .ms_customer-info,
+.ms_more-info .ms_customer-products {
+  color: #212529;
+}
+.ms_more-info .ms_single-order-info span,
+.ms_more-info .ms_customer-info span,
+.ms_more-info .ms_customer-products span {
+  color: #740602;
 }
 
 .ms_chart-wrapper {
   margin-inline: auto;
-  width: 70%;
+  width: 80%;
   max-width: 1000px;
   aspect-ratio: 2/1;
 }
@@ -467,6 +481,8 @@ section .ms_form-card-body {
   }
 }
 .ms_product-details {
+  margin-inline: auto;
+  max-width: 1200px;
   justify-content: space-between;
 }
 .ms_product-details-left {
@@ -493,8 +509,7 @@ section .ms_form-card-body {
   scale: 1.05;
 }
 .ms_product-details-left-img > .ms_placeholder-img {
-  width: 60%;
-  aspect-ratio: 1/1;
+  filter: grayscale(1) opacity(0.5);
 }
 .ms_product-details-left > div.text-center {
   font-size: 1.5rem;
@@ -522,12 +537,6 @@ section .ms_form-card-body {
   color: #740602;
 }
 
-@media (min-width: 1700px) {
-  .ms_product-details {
-    margin-inline: auto;
-    width: 80%;
-  }
-}
 @media (max-width: 600px) {
   .ms_product-details {
     flex-direction: column;
@@ -555,6 +564,9 @@ section .ms_form-card-body {
 }
 
 .ms_order-row {
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   padding-block: 0.5rem;
   border-bottom: 2px solid #feaa02;
 }
@@ -575,6 +587,14 @@ section .ms_form-card-body {
 }
 
 @media screen and (max-width: 640px) {
+  .ms_order-row {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-block: 0.8rem;
+  }
+  .ms_order-row .ms_user-orders-info {
+    margin-bottom: 0.8rem;
+  }
   li.page-item {
     display: none;
   }
