--- a/resources/sass/back-sass/components/_modal.scss
+++ b/resources/sass/back-sass/components/_modal.scss
@@ -6,10 +6,12 @@
     translate: -50% -50%;
     z-index: 2000;
 }
+
 .modal-confirm {		
     color: $primary-color;
     width: 400px;
 }
+
 .modal-confirm .modal-content {
     padding: 2rem;
     border-radius: 1rem;
@@ -17,61 +19,82 @@
     text-align: center;
     font-size: 14px;
 }
+
 .modal-confirm .modal-header {
     padding: 0;
     border-bottom: none;   
     position: relative;
 }
+
 .modal-confirm h4 {
     margin-inline: auto;
     font-size: 2.2rem;
 }
+
 .modal-confirm .close {
     position: absolute;
     top: 0;
     right: 0;
-    color: red;
+    color: $primary-color;
+
+    &:hover {
+        color: $secondary-color;
+    }
 }
+
 .modal-confirm .modal-body {
     padding: 0;
-    color: #999;
+    color: #212529;
+
+    p.ms_modal-delete-txt {
+        margin-bottom: 2rem;
+    }
 }
+
 .modal-confirm .modal-footer {
     padding: 0;
     border: none;
-    text-align: center;		
-    font-size: 1rem;
+    text-align: center;	
+    font-size: 1rem
 }
-.modal-confirm .modal-footer a {
-    color: #999;
-}		
+
 .modal-confirm .icon-box {
     width: 80px;
     height: 80px;
     margin-inline: auto;
     border-radius: 50%;
-    z-index: 1000;
-    border: 4px solid #f00;
+    border: 4px solid $secondary-color;
 }
+
 .modal-confirm .icon-box .fa-exclamation {
-    color: #f00;
+    color: $secondary-color;
     font-size: 2.5rem;
 }
-.modal-confirm .btn, .modal-confirm .btn:active {
-    color: #fff;
-    border-radius: 4px;
-    background: #60c7c1;
-    text-decoration: none;
-    transition: all 0.4s;
-    line-height: normal;
-    min-width: 120px;
-    border: none;
-    min-height: 40px;
-    border-radius: 3px;
-    margin: 0 5px;
-}
-.trigger-btn {
-    display: inline-block;
-    margin: 100px auto;
+
+.ms_more-info {
+    width: fit-content;
+
+    ul {
+        list-style: inside;
+
+        li::marker {
+            color: $tertiary-color;
+        }
+    }
+    h5 {
+        color: $primary-color;
+    }
+    div {
+        font-size: 0.94rem;
+    }
+    .ms_single-order-info,
+    .ms_customer-info,
+    .ms_customer-products {
+        color: #212529;
+
+        span {
+            color: $secondary-color;
+        }
+    }
 }
 // end banner elimination card confirm
