--- a/resources/sass/back-sass/pages/_orders.scss
+++ b/resources/sass/back-sass/pages/_orders.scss
@@ -1,7 +1,11 @@
 .ms_order-row {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     padding-block: 0.5rem;
     border-bottom: 2px solid $primary-color;
 }
+
 .ms_paginator-links {
     margin-inline: auto;
     width: fit-content;
@@ -23,6 +27,16 @@
 
 // MEDIA QUERIES
 @media screen and ( max-width: 640px ){
+
+    .ms_order-row {
+        flex-direction: column;
+        align-items: flex-start;
+        padding-block: 0.8rem;
+
+        .ms_user-orders-info {
+            margin-bottom: 0.8rem;
+        }
+    }
 
     li.page-item {
 
