--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -96,12 +96,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, .p{
 
 // front office style commons 
 
-.js_container {
-    width: 65%;
-    margin: 0 auto;
-    position: relative;
-}
-
 .main_title{
     margin: 100px auto 0 auto;
     text-align: center;
@@ -124,7 +118,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, p, .p{
     padding: 0.5rem 2rem;
 }
 
-h2.fo-style{
+h2.front-office-style{
     // font-family:
     font-weight: 900;
     font-size: 5rem;
@@ -132,22 +126,22 @@ h2.fo-style{
      #9C9C9C 4px 4px 0px;
 }
 
-h3.fo-style{
+h3.front-office-style{
     font-weight: 700;
     font-size: 2rem;
 }
 
-h4.fo-style{
+h4.front-office-style{
     font-weight: 700;
     font-size: 1.4rem;
 }
 
-h5.fo-style{
+h5.front-office-style{
     font-weight: 900;
     font-size: 1.4rem;
 }
 
-p.fo-style{
+p.front-office-style{
     font-size: 1.2rem;
     text-align: center;
     font-weight: 900;
