--- a/resources/js/style/common.scss
+++ b/resources/js/style/common.scss
@@ -37,7 +37,7 @@ a {
     border: none;
     border-radius: 10rem;
     background-color: $secondary-color;
-    color: white;
+    color: $primary-color;
 
     &:hover {
         text-decoration: none;
