--- a/resources/sass/back-sass/common/_common.scss
+++ b/resources/sass/back-sass/common/_common.scss
@@ -171,6 +171,7 @@ aside {
     li {
         padding-bottom: 1rem;
         padding-left: 1rem;
+        font-size: 0.95rem;
     }
 }
 
@@ -194,6 +195,7 @@ section {
     border: none;
     border-radius: 10rem;
     background-color: $secondary-color;
+    font-size: 0.95rem;
     color: $primary-color;
     font-weight: 600;
 
