--- a/resources/sass/back-sass/common/_variables.scss
+++ b/resources/sass/back-sass/common/_variables.scss
@@ -5,7 +5,7 @@ $line-height-base: 1.6;
 
 // COLOR PALETTE
 $text-color: #181f1c;
-$primary-color: #feaa02;
+$primary-color: #ffc509;
 $secondary-color: #740602;
 $tertiary-color: #264f36;
 $danger-color: #f44;
