--- a/resources/js/style/variables.scss
+++ b/resources/js/style/variables.scss
@@ -11,6 +11,9 @@ $tertiary-color: #264f36;
 
 // COLOR OF ELEMENTS
 
+// page product background
+$page-product-bg: radial-gradient(circle, rgba(255,197,9,1) 58%, rgba(235,179,2,1) 80%, rgba(208,158,0,1) 100%);
+
 // product card 
 $product-card-bg: #f5f5f5;
 $product-card-cart-icon: #740602;  //secondary
