--- a/resources/js/style/variables.scss
+++ b/resources/js/style/variables.scss
@@ -15,7 +15,7 @@ $tertiary-color: #264f36;
 $page-product-bg: radial-gradient(circle, rgba(255,197,9,1) 58%, rgba(235,179,2,1) 80%, rgba(208,158,0,1) 100%);
 
 // product card 
-$product-card-bg: #f5f5f5;
+$product-card-bg:#ffc509;  //primary
 $product-card-cart-icon: #740602;  //secondary
 $product-card-cart-icon-hover: #eae1e1;
 $product-card-cart-info:#ffc509;  //primary
@@ -29,8 +29,8 @@ $popup-cart-close-overlay: #740602;  //secondary
 
 // cart 
 $cart-bg: #f5f5f5;
-$cart-quantity-btn: #b9b9d1;
-$cart-checkout-btn-bg: #6c808f;
+$cart-quantity-btn: #740602; //secondary
+$cart-checkout-btn-bg:#740602; //secondary
 $clear-cart-color:  #808083;
 
 // payment form and visa 
