color changed btn cart

--- a/resources/js/style/variables.scss
+++ b/resources/js/style/variables.scss
@@ -34,8 +34,8 @@ $cart-checkout-btn-bg:#740602; //secondary
 $clear-cart-color:  #808083;
 
 // payment form and visa 
-$payment-card-bg: red;
-$pay-now-btn:  #6c808f;
+// $payment-card-bg: red;
+$pay-now-btn: #740602;  //secondary
 
 
 
